name: advent-christimas
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: GPL-3
maintainer: samosaara@gmail.com
homepage: https://github.com/samosaara/advent-christimas-2017#readme
category: Web
author: Samuel Henrique Oliveira da Silva
extra-source-files:
    README.md

executable advent-christimas
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        time >=1.6.0.1
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Xmas
